@@ -1,6 +1,12 @@
 xxxx-xx-xx: Revelation 0.5.0
 ============================
 
+New features:
+- use gtk.AboutDialog for about dialogs
+
+Bugfixes:
+- removed the Help > Homepage menu item
+
 Code changes:
 - don't use deprecated gnome-python modules
 - moved preference dialog from dialog module to main script
