@@ -8,6 +8,10 @@ Revelation changelog
 
 	* moved preference dialog from dialog module to main script
 
+	* use gtk.AboutDialog for about dialogs
+
+	* removed the Help > Homepage menu item
+
 ---------------[ 2006-02-06 : 0.4.7 ]---------------
 
 2006-02-03  Erik Grinaker <erikg@codepoet.no>
